Fix miss alignment on feedback list item and make container height:100%

--- a/styles/empleado.css
+++ b/styles/empleado.css
@@ -69,7 +69,7 @@
 .b-empleado-main__items {
   border-bottom-right-radius: 20vw;
   overflow-y: auto;
-  max-height: 30vh;
+  height:100%;
   width: 90%;
 }
 .b-empleado-main__item {
@@ -149,7 +149,6 @@
   border-radius: 50%;
 }
 .b-empleado-main__nombre {
-  text-align: center;
   color: #014596;
   font-size: 18px;
   font-weight: 700;
@@ -262,7 +261,5 @@
     max-height: 25vh;
   }
 
-  .b-empleado-main__items {
-    max-height: 40vh;
-  }
+
 }
